[package]
name = "js8-monitor"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
log = "0.4.*"
log4rs = "1.*"