[package]
name = "js8-monitor"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
log = "0.4"
log4rs = "1.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
