[package]
name = "js8-monitor"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.13"
clap = "2.33.*"
serde = { version = "1.0.*", features = ["derive"] }
log = "0.4"
log4rs = "1.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "*", features = ["full"] }
redis = "*"
serde_json = "1.0.*"
uuid = {version = "0.8.2", features = ["v4"]}
js8event = { path = "../js8event" }
